# gai-tts-svr

./: Dockerfile  pyproject.toml  pyproject.toml.docker
src/gai/tts/server/: gai_xtts.py
src/gai/tts/server/api/: main.obsolete.py  main.py
tests/integrationtest/: gai-tts.ipynb
